Make it responsive. Remove collapsable border effect due to buggy behaviour

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -5,11 +5,11 @@
 
 .Pagination {
   color: $gray-2;
-  display: flex;
   margin: 0 -1.5rem 1rem;
   text-align: center;
 
   @media (min-width: 30em) {
+    display: flex;
     margin: 3rem 0;
   }
 
@@ -22,7 +22,9 @@
     padding: 1rem;
 
     &:first-child {
-      margin-bottom: 10px;
+      margin-bottom: -1px;
+      position: relative;
+      z-index: 2;
     }
 
     @media (min-width: 30em) {
@@ -43,17 +45,13 @@
 
     // Only provide a hover state for linked pagination items
     &--Link {
-      position: relative;
-
       &:after {
-        bottom: -1px;
-        left: 0;
-        position: absolute;
-        right: 0;
+        display: none;
       }
 
       &:hover, &:focus {
         background-color: $gray-1;
+        border-bottom-color: $link-color;
       }
     }
   }
